# nexign_task1

./: CMakeLists.txt  main.cpp  solution.cpp  solution.h  storage.cpp  storage.h
